config/jenkins/k8s-jenkins-deployment.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins-destination
spec:
  host: jenkins.keptn.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
spec:
  hosts:
  - "jenkins.keptn.GATEWAY_PLACEHOLDER.xip.io"
  - "jenkins.keptn.svc.cluster.local"
  gateways:
  - jenkins-gateway
  http:
  - route:
    - destination:
        host: jenkins.keptn.svc.cluster.local
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  namespace: keptn
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: jnlp
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: keptn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: keptn/jenkins:0.4-rc
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
              - name: jenkins-persistent-storage-workspaces
                mountPath: /var/jenkins_home/workspaces
              - name: jenkins-persistent-storage-jobs
                mountPath: /var/jenkins_home/jobs
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "cp -R /tmp/jobs/* /var/jenkins_home/jobs/"
      volumes:
      - name: jenkins-persistent-storage-workspaces
        persistentVolumeClaim:
           claimName: jenkins-workspaces
      - name: jenkins-persistent-storage-jobs
        persistentVolumeClaim:
           claimName: jenkins-jobs
